DONE: managed add project and section flow

--- a/src/index.css
+++ b/src/index.css
@@ -121,5 +121,14 @@
   }
 }
 
+html, body, #root {
+  min-height: 100vh;
+}
 
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  justify-items: space-between;
+}
 
